--- a/index.html
+++ b/index.html
@@ -38,12 +38,22 @@
         </nav>
         <ul class="contacts list">
           <li class="item">
-            <a href="mailto:info@devstudio.com" class="link"
+            <a href="mailto:info@devstudio.com" class="link mail"
+              ><svg class="envelope-icon">
+                <use
+                  href="../images/icon/symbol-defs.svg#icon-envelope"
+                ></use></svg
               >info@devstudio.com</a
             >
           </li>
           <li class="item">
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="link phone"
+              ><svg class="smartphone-icon">
+                <use
+                  href="../images/icon/symbol-defs.svg#icon-smartphone"
+                ></use></svg
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -161,7 +171,66 @@
           </ul>
         </div>
       </section>
+
+      <!-- Клиенты -->
+
+      <section class="section">
+        <div class="container company">
+          <h2 class="section-title clients">Постоянные клиенты</h2>
+          <ul class="company-logo">
+            <li class="item">
+              <a href="">
+                <svg class="clients-logo">
+                  <use
+                    href="../images/icon/symbol-defs.svg#icon-Logo1"
+                  ></use></svg
+              ></a>
+            </li>
+            <li class="item">
+              <a href="">
+                <svg class="clients-logo">
+                  <use
+                    href="../images/icon/symbol-defs.svg#icon-Logo2"
+                  ></use></svg
+              ></a>
+            </li>
+            <li class="item">
+              <a href="">
+                <svg class="clients-logo">
+                  <use
+                    href="../images/icon/symbol-defs.svg#icon-Logo3"
+                  ></use></svg
+              ></a>
+            </li>
+            <li class="item">
+              <a href="">
+                <svg class="clients-logo">
+                  <use
+                    href="../images/icon/symbol-defs.svg#icon-Logo4"
+                  ></use></svg
+              ></a>
+            </li>
+            <li class="item">
+              <a href="">
+                <svg class="clients-logo">
+                  <use
+                    href="../images/icon/symbol-defs.svg#icon-Logo5"
+                  ></use></svg
+              ></a>
+            </li>
+            <li class="item">
+              <a href="">
+                <svg class="clients-logo">
+                  <use
+                    href="../images/icon/symbol-defs.svg#icon-Logo6"
+                  ></use></svg
+              ></a>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
+
     <!-- Футер -->
 
     <footer class="footer main">
@@ -183,6 +252,15 @@
             </li>
           </ul>
         </address>
+      </div>
+      <div class="container social">
+        <h3 class="title">Присоидиняйтесь</h3>
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
       </div>
     </footer>
   </body>
