--- a/portfolio.html
+++ b/portfolio.html
@@ -21,11 +21,13 @@
     <header>
       <div class="container main-nav">
         <nav class="navigation">
-          <a href="./index.html" lang="en" class="logo"
+          <a href="./index.html" class="logo"
             ><span class="logo-first">Web</span>Studio</a
           >
           <ul class="site-nav list">
-            <li class="item"><a href="./index.html" class="link">Студия</a></li>
+            <li class="item">
+              <a href="./index.html" class="link">Студия</a>
+            </li>
             <li class="item">
               <a href="./portfolio.html" class="link current">Портфолио</a>
             </li>
@@ -34,12 +36,22 @@
         </nav>
         <ul class="contacts list">
           <li class="item">
-            <a href="mailto:info@devstudio.com" class="link"
+            <a href="mailto:info@devstudio.com" class="link mail"
+              ><svg class="envelope-icon">
+                <use
+                  href="../images/icon/symbol-defs.svg#icon-envelope"
+                ></use></svg
               >info@devstudio.com</a
             >
           </li>
           <li class="item">
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="link phone"
+              ><svg class="smartphone-icon">
+                <use
+                  href="../images/icon/symbol-defs.svg#icon-smartphone"
+                ></use></svg
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
