--- a/index.html
+++ b/index.html
@@ -141,6 +141,17 @@
               <div class="card">
                 <h3 class="title">Игорь Демьяненко</h3>
                 <p class="position" lang="en">Product Designer</p>
+                <ul class="social-menu">
+                  <li class="staff-item"><a href="#" class="link-staff"><svg class="social-staff" width="20px"
+  height="20px"><use href="../images/icon/symbol-defs.svg#icon-instagram"></use></svg></a></li>
+                  <li class="staff-item"><a href="#" class="link-staff"><svg class="social-staff" width="20px"
+  height="20px"><use href="../images/icon/symbol-defs.svg#icon-twitter"></use></svg></a></li>
+                  <li class="staff-item"><a href="#" class="link-staff"><svg class="social-staff" width="20px"
+  height="20px"><use href="../images/icon/symbol-defs.svg#icon-facebook"></use></svg></a></li>
+                  <li class="staff-item"><a href="#" class="link-staff"><svg class="social-staff" width="20px"
+  height="20px"><use href="../images/icon/symbol-defs.svg#icon-linkedin"></use></svg></a></li>
+                  
+                </ul>
               </div>
             </li>
             <li class="item">
@@ -252,15 +263,50 @@
             </li>
           </ul>
         </address>
-      </div>
-      <div class="container social">
-        <h3 class="title">Присоидиняйтесь</h3>
-        <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>
+        <div>
+          <h3 class="social-title">Присоединяйтесь</h3>
+          <ul class="social-menu">
+            <li class="social-item">
+              <a href="#" class="social-link">
+                <svg class="social-logo" width="20px"
+  height="20px">
+                  <use
+                    href="../images/icon/symbol-defs.svg#icon-instagram-footer"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="#" class="social-link">
+                <svg class="social-logo width="20px"
+  height="20px">
+                  <use
+                    href="../images/icon/symbol-defs.svg#icon-twitter-footer"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="#" class="social-link">
+                <svg class="social-logo" width="20px"
+  height="20px">
+                  <use
+                    href="../images/icon/symbol-defs.svg#icon-facebook-footer"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="#" class="social-link">
+                <svg class="social-logo">
+                  <use
+                    href="../images/icon/symbol-defs.svg#icon-linkedin-footer"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
