--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
           <ul class="company-logo">
             <li class="item">
               <a href="">
-                <svg class="clients-logo">
+                <svg class="clients-logo" >
                   <use
                     href="./images/icon/symbol-defs.svg#icon-Logo1"
                   ></use></svg
@@ -283,6 +283,7 @@
           ><span class="logo-first">Web</span
           ><span class="logo-second">Studio</span></a
         >
+        <div class="footer-left">
         <address class="address-block">
           <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
           <ul class="footer-list">
@@ -339,6 +340,7 @@
               </a>
             </li>
           </ul>
+        </div>
         </div>
       </div>
     </footer>
