--- a/portfolio.html
+++ b/portfolio.html
@@ -212,6 +212,7 @@
           ><span class="logo-first">Web</span
           ><span class="logo-second">Studio</span></a
         >
+        <div class="footer-left">
         <address class="address-block">
           <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
           <ul class="footer-list">
@@ -225,6 +226,51 @@
             </li>
           </ul>
         </address>
+        <div>
+          <h3 class="social-title">Присоединяйтесь</h3>
+          <ul class="social-menu">
+            <li class="social-item">
+              <a href="#" class="social-link">
+                <svg class="social-logo" width="20px"
+  height="20px">
+                  <use
+                    href="./images/icon/symbol-defs.svg#icon-instagram-footer"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="#" class="social-link">
+                <svg class="social-logo width="20px"
+  height="20px">
+                  <use
+                    href="./images/icon/symbol-defs.svg#icon-twitter-footer"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="#" class="social-link">
+                <svg class="social-logo" width="20px"
+  height="20px">
+                  <use
+                    href="./images/icon/symbol-defs.svg#icon-facebook-footer"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="#" class="social-link">
+                <svg class="social-logo">
+                  <use
+                    href="./images/icon/symbol-defs.svg#icon-linkedin-footer"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+        </div>
       </div>
     </footer>
   </body>
