--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
             <a href="mailto:info@devstudio.com" class="link mail"
               ><svg class="envelope-icon">
                 <use
-                  href="../images/icon/symbol-defs.svg#icon-envelope"
+                  href="./images/icon/symbol-defs.svg#icon-envelope"
                 ></use></svg
               >info@devstudio.com</a
             >
@@ -48,7 +48,7 @@
             <a href="tel:+380961111111" class="link phone"
               ><svg class="smartphone-icon">
                 <use
-                  href="../images/icon/symbol-defs.svg#icon-smartphone"
+                  href="./images/icon/symbol-defs.svg#icon-smartphone"
                 ></use></svg
               >+38 096 111 11 11</a
             >
