--- a/index.html
+++ b/index.html
@@ -223,48 +223,48 @@
           <h2 class="section-title clients">Постоянные клиенты</h2>
           <ul class="company-logo">
             <li class="item">
-              <a href="">
-                <svg class="clients-logo" >
+              <a href="" class="clients-logo">
+                <svg  >
                   <use
                     href="./images/icon/symbol-defs.svg#icon-Logo1"
                   ></use></svg
               ></a>
             </li>
             <li class="item">
-              <a href="">
-                <svg class="clients-logo">
+              <a href="" class="clients-logo">
+                <svg >
                   <use
                     href="./images/icon/symbol-defs.svg#icon-Logo2"
                   ></use></svg
               ></a>
             </li>
             <li class="item">
-              <a href="">
-                <svg class="clients-logo">
+              <a href="" class="clients-logo">
+                <svg >
                   <use
                     href="./images/icon/symbol-defs.svg#icon-Logo3"
                   ></use></svg
               ></a>
             </li>
             <li class="item">
-              <a href="">
-                <svg class="clients-logo">
+              <a href="" class="clients-logo">
+                <svg >
                   <use
                     href="./images/icon/symbol-defs.svg#icon-Logo4"
                   ></use></svg
               ></a>
             </li>
             <li class="item">
-              <a href="">
-                <svg class="clients-logo">
+              <a href="" class="clients-logo">
+                <svg >
                   <use
                     href="./images/icon/symbol-defs.svg#icon-Logo5"
                   ></use></svg
               ></a>
             </li>
             <li class="item">
-              <a href="">
-                <svg class="clients-logo">
+              <a href="" class="clients-logo">
+                <svg >
                   <use
                     href="./images/icon/symbol-defs.svg#icon-Logo6"
                   ></use></svg
@@ -279,12 +279,10 @@
 
     <footer class="footer main">
       <div class="container footer">
-        
-        <a href="./index.html" class="logo" lang="en"
+        <div><a href="./index.html" class="logo" lang="en"
           ><span class="logo-first">Web</span
           ><span class="logo-second">Studio</span></a
         >
-        <div class="footer-left">
         <address class="address-block">
           <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
           <ul class="footer-list">
@@ -297,9 +295,8 @@
               <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
             </li>
           </ul>
-        </address>
-        <div>
-          <h3 class="social-title">Присоединяйтесь</h3>
+        </address></div>
+        <div><h3 class="social-title">Присоединяйтесь</h3>
           <ul class="social-menu">
             <li class="social-item">
               <a href="#" class="social-link">
@@ -333,16 +330,16 @@
             </li>
             <li class="social-item">
               <a href="#" class="social-link">
-                <svg class="social-logo">
+                <svg class="social-logo" width="20px"
+  height="20px">
                   <use
                     href="./images/icon/symbol-defs.svg#icon-linkedin-footer"
                   ></use>
                 </svg>
               </a>
             </li>
-          </ul>
-        </div>
-        </div>
+          </ul></div>
+          
       </div>
     </footer>
   </body>
