--- a/portfolio.html
+++ b/portfolio.html
@@ -208,11 +208,10 @@
 
     <footer class="footer main">
       <div class="container footer">
-        <a href="./index.html" class="logo" lang="en"
+        <div><a href="./index.html" class="logo" lang="en"
           ><span class="logo-first">Web</span
           ><span class="logo-second">Studio</span></a
         >
-        <div class="footer-left">
         <address class="address-block">
           <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
           <ul class="footer-list">
@@ -225,9 +224,8 @@
               <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
             </li>
           </ul>
-        </address>
-        <div>
-          <h3 class="social-title">Присоединяйтесь</h3>
+        </address></div>
+        <div><h3 class="social-title">Присоединяйтесь</h3>
           <ul class="social-menu">
             <li class="social-item">
               <a href="#" class="social-link">
@@ -261,16 +259,16 @@
             </li>
             <li class="social-item">
               <a href="#" class="social-link">
-                <svg class="social-logo">
+                <svg class="social-logo" width="20px"
+  height="20px">
                   <use
                     href="./images/icon/symbol-defs.svg#icon-linkedin-footer"
                   ></use>
                 </svg>
               </a>
             </li>
-          </ul>
-        </div>
-        </div>
+          </ul></div>
+          
       </div>
     </footer>
   </body>
