--- a/portfolio.html
+++ b/portfolio.html
@@ -227,7 +227,7 @@
           </li>
           <li class="social-item">
             <a href="#" class="social-link">
-              <svg class="social-logo width=" 20px" height="20px">
+              <svg class="social-logo" width="20px" height="20px">
                 <use href="./images/icon/symbol-defs.svg#icon-twitter-footer"></use>
               </svg>
             </a>
