--- a/portfolio.html
+++ b/portfolio.html
@@ -248,6 +248,17 @@
           </li>
         </ul>
       </div>
+      <div class="subscribe">
+        <form action="subscribe">
+          <h3 class="subscribe-title">Подпишитесь на рассылку</h3>
+          <label for="mail" hidden>E-mail</label>
+          <div class="subscribe-block">
+            <input type="email" name="mail" id="e-mail" placeholder="E-mail">
+            <button class="subscribe-btn" type="submit">Подписаться</button>
+          </div>
+
+        </form>
+      </div>
 
     </div>
   </footer>
