--- a/index.html
+++ b/index.html
@@ -66,24 +66,38 @@
               </svg></button>
 
             <form class="modal-form">
-              <h2 class="modal-apeal">Оставьте свои данные, мы вам перезвоним</h2>
-              <div class="form-field"><label for="name">Имя</label>
-                <input type="text" name="name" id="name">
+              <p class="modal-apeal">Оставьте свои данные, мы вам перезвоним</p>
+              <label class="modal-form-label" for="name">Имя</label>
+              <div class="form-field">
+                <input class="input-field" type="text" name="name" id="name"><svg class="input-icon" width="18px"
+                  height="18px">
+                  <use href="./images/icon/symbol-defs.svg#icon-person-form"></use>
+                </svg>
+
               </div>
-              <div class="form-field"><label for="tel">Телефон</label>
+              <label class="modal-form-label" for="tel">Телефон</label>
+              <div class="form-field">
                 <input type="tel" name="tel" id="tel">
+                <svg class="input-icon" width="18px" height="18px">
+                  <use href="./images/icon/symbol-defs.svg#icon-phone-form"></use>
+                </svg>
               </div>
-              <div class="form-field"><label for="mail ">Почта</label>
+              <label class="modal-form-label" for="mail">Почта</label>
+              <div class="form-field">
                 <input type="email" name="mail" id="mail">
+                <svg class="input-icon" width="18px" height="18px">
+                  <use href="./images/icon/symbol-defs.svg#icon-email-form"></use>
+                </svg>
               </div>
-              <div class="form-field"><label for="comment">Комментарий</label>
+              <div class="form-field comment"><label class="modal-form-label" for="comment">Комментарий</label>
                 <textarea class="comment" name="comment" id="comment" placeholder="Введите текст"></textarea>
               </div>
-              <div class="submit-agree">
-                <input type="checkbox" name="agree" value="agree" id="agree">
-                <label for="agree">Соглашаюсь с рассылкой и принимаю <a class="license" href="">Условия
-                    договора</a></label>
-              </div>
+
+              <input class="modal-form-checkbox visually-hidden" type="checkbox" name="agree" value="agree" id="agree">
+              <label class="modal-form-checkbox-label" for="agree">Соглашаюсь с рассылкой и принимаю&nbsp; <a
+                  class="license" href="">Условия
+                  договора</a></label>
+
               <button class="submit-btn" type="submit">Отправить</button>
 
             </form>
@@ -347,7 +361,7 @@
           </li>
           <li class="social-item">
             <a href="#" class="social-link">
-              <svg class="social-logo width=" 20px" height="20px">
+              <svg class="social-logo" width="20px" height="20px">
                 <use href="./images/icon/symbol-defs.svg#icon-twitter-footer"></use>
               </svg>
             </a>
@@ -369,11 +383,13 @@
         </ul>
       </div>
       <div class="subscribe">
-        <form action="">
+        <form action="subscribe">
           <h3 class="subscribe-title">Подпишитесь на рассылку</h3>
           <label for="mail" hidden>E-mail</label>
-          <input type="email" name="mail" id="mail" placeholder="E-mail">
-          <button class="subscribe-btn">Подписаться</button>
+          <div class="subscribe-block">
+            <input type="email" name="mail" id="e-mail" placeholder="E-mail">
+            <button class="subscribe-btn" type="submit">Подписаться</button>
+          </div>
 
         </form>
       </div>
